deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: nginx
  template:  
    metadata:
      labels:
        app: nginx
      annotations:
        co.elastic.logs/module: "nginx"
        co.elastic.logs/fileset.stdout: "access"
    spec:
      serviceAccountName: nginx
      # imagePullSecrets:
      # - name: regcred
      containers:
        - name: nginx
          image: nginx:1.29
          ports:
          - containerPort: 80
            name: http
          resources:
            limits:
              cpu: 300m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi

          livenessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 3
            periodSeconds: 5

          startupProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 3
            periodSeconds: 5

          args:
            - nginx-debug
            - '-g'
            - 'daemon off;'

          # volumeMounts:
          # - name: config
          #   mountPath: /etc/nginx/nginx.conf
          #   subPath: nginx.conf
          # - name: data
          #   mountPath: /persistent-disk 
      # volumes:
        # - name: config
        #   configMap:
        #     name: config-nginx
        # - name: data
        #   persistentVolumeClaim:
        #     claimName: local-hostpath-pvc
