pod-api-java.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-java
spec:
  containers:
    - name: api-java
      image: nachomillangarcia/ayesa-java-api
      ports:
        - containerPort: 8080
